posts index columns fixed at width 2

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,7 +3,7 @@
 <h1 class="text-center text-white">Forecasts by date</h1>
 <div class="row">
 	<% @posts.each do |post| %>
-		<div class="col">
+		<div class="col-2">
 			<div class="card bg-dark text-white">
 				<div class="card-body">
 					<h5 class="card-title"><%= post.title %></h5>
